--- a/style-dictionary/tokens/base/color.json5
+++ b/style-dictionary/tokens/base/color.json5
@@ -64,7 +64,7 @@
             },
             "contrast": {
                 "normal":{
-                    "value": "rgba(44, 57, 89, 1))"
+                    "value": "rgba(44, 57, 89, 1)"
                 },
                 "hover":{
                     "value": "rgba(39, 50, 78, 1)"
@@ -73,7 +73,7 @@
                     "value": "rgba(54, 70, 109, 1)"
                 },
                 "disable":{
-                    "value":"rgba(238, 239, 242, 1)"
+                    "value":"rgba(237, 238, 243, 1)"
                 }
             },
             "statusDefault": {
@@ -85,6 +85,9 @@
                 },
                 "active":{
                     "value":"rgba(227, 227, 232, 1)"
+                },
+                "disable":{
+                    "value":"rgba(238, 239, 242, 1)"
                 }
             },
             "statusPrimary": {
@@ -156,17 +159,7 @@
             "bonusDefault": {
                 "normal":{
                     "value": "rgba(55, 184, 102, 1)"
-                },
-                "hover":{
-                    "value":"rgba(50, 169, 94, 1)"
-                },
-                "active":{
-                    "value":"rgba(46, 153, 85, 1)"
-                },
-                "disable":{
-                    "value":"rgba(237, 238, 243, 1)"
                 }
-
             },
             "bonusGold": {
                 "normal":{
@@ -182,6 +175,9 @@
                 "normal":{
                     "value": "rgba(208, 209, 215, 1)",
                     "description": "Используется для серого фона компонентов, которым не хватает контраста с secondary"
+                },
+                "disable":{
+                    "value":"rgba(238, 239, 242, 1)"
                 }
             },
             "transparent":{
@@ -198,37 +194,49 @@
                     "value": "rgba(44, 57, 89, 1)"
                 },
                 "hover": {
-                    "value": "rgba(81, 82, 90, 1)"
+                    "value": "rgba(51, 66, 102, 1)"
                 },
                 "active": {
-                    "value": "rgba(81, 82, 90, 1)"
+                    "value": "rgba(58, 75, 116, 1)"
                 },
                 "disable": {
                     "value": "rgba(154, 158, 177, 1)"
                 }
             },
             "secondary": {
-                "default": {
+                "normal": {
                     "value": "rgba(98, 101, 127, 1)"
+                },
+                "disable": {
+                    "value": "rgba(154, 158, 177, 1)"
                 }
             },
             "description": {
-                "default": {
+                "normal": {
                     "value": "rgba(121, 124, 154, 1)"
+                },
+                "disable": {
+                    "value": "rgba(154, 158, 177, 1)"
                 }
             },
             "placeholder": {
-                "default": {
+                "normal": {
                     "value": "rgba(157, 160, 174, 1)"
+                },
+                "disable": {
+                    "value": "rgba(154, 158, 177, 1)"
                 }
             },
             "contrast": {
-                "default": {
+                "normal": {
                     "value": "rgba(255, 255, 255, 1)"
+                },
+                "disable": {
+                    "value": "rgba(255, 255, 255, 0.5)"
                 }
             },
             "accent": {
-                "default": {
+                "normal": {
                     "value": "rgba(55, 184, 102, 1)"
                 },
                 "hover": {
@@ -240,7 +248,6 @@
                 "disable": {
                     "value": "rgba(154, 158, 177, 1)"
                 }
-
             },
             "success": {
                 "default": {
@@ -261,6 +268,9 @@
                 },
                 "active": {
                     "value": "rgba(17, 152, 242, 1)"
+                },
+                "disable": {
+                    "value": "rgba(154, 158, 177, 1)"
                 }
             },
             "warning": {
@@ -279,6 +289,9 @@
                 },
                 "hover": {
                     "value": "rgba(255, 255, 255, 0.75)"
+                },
+                "disable": {
+                    "value": "rgba(154, 158, 177, 1)"
                 }
             }
             
