--- a/style-dictionary/tokens/components/button/buttonComposite.json5
+++ b/style-dictionary/tokens/components/button/buttonComposite.json5
@@ -28,7 +28,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.staticWhite.disable.value}"
                         }
                     }
                 },
@@ -90,7 +90,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.staticWhite.disable.value}"
                         }
                     }
                 },
@@ -152,7 +152,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.staticWhite.disable.value}"
                         }
                     }
                 },
@@ -398,13 +398,13 @@
                             "value": "{color.text.link.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.link.hover.value}"
+                            "value": "{color.text.link.normal.value}"
                         },
                         "active": {
-                            "value": "{color.text.link.active.value}"
+                            "value": "{color.text.link.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.link.disable.value}"
                         }
                     }
                 },
@@ -446,10 +446,10 @@
                             "value": "{color.bg.transparent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.bg.statusInfo.hover.value}"
+                            "value": "{color.bg.primary.hover.value}"
                         },
                         "active": {
-                            "value": "{color.bg.statusInfo.active.value}"
+                            "value": "{color.bg.primary.active.value}"
                         },
                         "disable": {
                             "value": "{color.bg.transparent.default.value}"
@@ -457,16 +457,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.link.normal.value}"
+                            "value": "{color.text.accent.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.link.hover.value}"
+                            "value": "{color.text.accent.normal.value}"
                         },
                         "active": {
-                            "value": "{color.text.link.active.value}"
+                            "value": "{color.text.accent.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.accent.disable.value}"
                         }
                     }
                 },
@@ -508,10 +508,10 @@
                             "value": "{color.bg.transparent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.bg.statusInfo.hover.value}"
+                            "value": "{color.bg.primary.hover.value}"
                         },
                         "active": {
-                            "value": "{color.bg.statusInfo.active.value}"
+                            "value": "{color.bg.primary.active.value}"
                         },
                         "disable": {
                             "value": "{color.bg.transparent.default.value}"
@@ -519,16 +519,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.link.normal.value}"
+                            "value": "{color.text.accent.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.link.hover.value}"
+                            "value": "{color.text.accent.normal.value}"
                         },
                         "active": {
-                            "value": "{color.text.link.active.value}"
+                            "value": "{color.text.accent.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.accent.disable.value}"
                         }
                     }
                 },
@@ -583,16 +583,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "active": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.contrast.disable.value}"
                         }
                     }
                 },
@@ -645,16 +645,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "active": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.contrast.disable.value}"
                         }
                     }
                 },
@@ -707,16 +707,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "active": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.contrast.disable.value}"
                         }
                     }
                 },
@@ -780,7 +780,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.staticWhite.disable.value}"
                         }
                     }
                 },
@@ -842,7 +842,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.staticWhite.disable.value}"
                         }
                     }
                 },
@@ -904,7 +904,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.staticWhite.disable.value}"
                         }
                     }
                 },
@@ -968,7 +968,7 @@
                             "value": "{color.text.link.active.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.link.disable.value}"
                         }
                     }
                 },
@@ -1021,16 +1021,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.link.normal.value}"
+                            "value": "{color.text.accent.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.link.hover.value}"
+                            "value": "{color.text.accent.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.link.active.value}"
+                            "value": "{color.text.accent.active.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.accent.disable.value}"
                         }
                     }
                 },
@@ -1083,16 +1083,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.link.normal.value}"
+                            "value": "{color.text.accent.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.link.hover.value}"
+                            "value": "{color.text.accent.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.link.active.value}"
+                            "value": "{color.text.accent.active.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.accent.disable.value}"
                         }
                     }
                 },
