--- a/style-dictionary/tokens/components/checkBox.json5
+++ b/style-dictionary/tokens/components/checkBox.json5
@@ -13,7 +13,7 @@
                         "active": {
                             "value": "{color.bg.accent.normal.value}"
                         },
-                        "activeHover": {
+                         "activeHover": {
                             "value": "{color.bg.accent.hover.value}"
                         },
                         "disable": {
@@ -50,7 +50,7 @@
                     },
                     "text":{
                         "normal": {
-                            "value": "{color.text.secondary.default.value}"
+                            "value": "{color.text.secondary.normal.value}"
                         },
                         "hover": {
                             "value": "{color.text.primary.normal.value}"
