--- a/style-dictionary/tokens/components/radioButton.json5
+++ b/style-dictionary/tokens/components/radioButton.json5
@@ -13,7 +13,7 @@
                         "active": {
                             "value": "{color.bg.accent.normal.value}"
                         },
-                        "activeHover": {
+                         "activeHover": {
                             "value": "{color.bg.accent.hover.value}"
                         },
                         "disable": {
@@ -48,9 +48,9 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         }
                     },
-                    "text":{
+                     "text":{
                         "normal": {
-                            "value": "{color.text.secondary.default.value}"
+                            "value": "{color.text.secondary.normal.value}"
                         },
                         "hover": {
                             "value": "{color.text.primary.normal.value}"
