--- a/style-dictionary/tokens/components/button/buttonIcon.json5
+++ b/style-dictionary/tokens/components/button/buttonIcon.json5
@@ -1,4 +1,3 @@
-
 {
     "buttonIcon": {
         "primary": {
@@ -29,7 +28,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.staticWhite.disable.value}"
                         }
                     }
                 },
@@ -90,7 +89,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.staticWhite.disable.value}"
                         }
                     }
                 },
@@ -151,7 +150,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.staticWhite.disable.value}"
                         }
                     }
                 },
@@ -379,10 +378,10 @@
                             "value": "{color.bg.transparent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.bg.statusInfo.hover.value}"
+                            "value": "{color.bg.secondary.hover.value}"
                         },
                         "active": {
-                            "value": "{color.bg.statusInfo.active.value}"
+                            "value": "{color.bg.secondary.active.value}"
                         },
                         "disable": {
                             "value": "{color.bg.transparent.default.value}"
@@ -390,13 +389,13 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.link.normal.value}"
+                            "value": "{color.text.primary.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.link.hover.value}"
+                            "value": "{color.text.primary.normal.value}"
                         },
                         "active": {
-                            "value": "{color.text.link.active.value}"
+                            "value": "{color.text.primary.normal.value}"
                         },
                         "disable": {
                             "value": "{color.text.primary.disable.value}"
@@ -440,10 +439,10 @@
                             "value": "{color.bg.transparent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.bg.statusInfo.hover.value}"
+                            "value": "{color.bg.secondary.hover.value}"
                         },
                         "active": {
-                            "value": "{color.bg.statusInfo.active.value}"
+                            "value": "{color.bg.secondary.active.value}"
                         },
                         "disable": {
                             "value": "{color.bg.transparent.default.value}"
@@ -451,13 +450,13 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.link.normal.value}"
+                            "value": "{color.text.primary.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.link.hover.value}"
+                            "value": "{color.text.primary.normal.value}"
                         },
                         "active": {
-                            "value": "{color.text.link.active.value}"
+                            "value": "{color.text.primary.normal.value}"
                         },
                         "disable": {
                             "value": "{color.text.primary.disable.value}"
@@ -501,10 +500,10 @@
                             "value": "{color.bg.transparent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.bg.statusInfo.hover.value}"
+                            "value": "{color.bg.secondary.hover.value}"
                         },
                         "active": {
-                            "value": "{color.bg.statusInfo.active.value}"
+                            "value": "{color.bg.secondary.active.value}"
                         },
                         "disable": {
                             "value": "{color.bg.transparent.default.value}"
@@ -512,13 +511,13 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.link.normal.value}"
+                            "value": "{color.text.primary.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.link.hover.value}"
+                            "value": "{color.text.primary.normal.value}"
                         },
                         "active": {
-                            "value": "{color.text.link.active.value}"
+                            "value": "{color.text.primary.normal.value}"
                         },
                         "disable": {
                             "value": "{color.text.primary.disable.value}"
@@ -575,16 +574,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "active": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.contrast.disable.value}"
                         }
                     }
                 },
@@ -636,16 +635,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "active": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.contrast.disable.value}"
                         }
                     }
                 },
@@ -697,16 +696,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "active": {
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.contrast.disable.value}"
                         }
                     }
                 },
@@ -769,7 +768,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.staticWhite.disable.value}"
                         }
                     }
                 },
@@ -830,7 +829,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.staticWhite.disable.value}"
                         }
                     }
                 },
@@ -891,7 +890,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.staticWhite.disable.value}"
                         }
                     }
                 },
@@ -945,13 +944,13 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.link.normal.value}"
+                            "value": "{color.text.primary.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.link.hover.value}"
+                            "value": "{color.text.primary.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.link.active.value}"
+                            "value": "{color.text.primary.active.value}"
                         },
                         "disable": {
                             "value": "{color.text.primary.disable.value}"
@@ -1006,13 +1005,13 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.link.normal.value}"
+                            "value": "{color.text.primary.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.link.hover.value}"
+                            "value": "{color.text.primary.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.link.active.value}"
+                            "value": "{color.text.primary.active.value}"
                         },
                         "disable": {
                             "value": "{color.text.primary.disable.value}"
@@ -1067,13 +1066,13 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.link.normal.value}"
+                            "value": "{color.text.primary.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.link.hover.value}"
+                            "value": "{color.text.primary.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.link.active.value}"
+                            "value": "{color.text.primary.active.value}"
                         },
                         "disable": {
                             "value": "{color.text.primary.disable.value}"
