--- a/style-dictionary/tokens/components/informationCard/informationCardButtonIcon.json5
+++ b/style-dictionary/tokens/components/informationCard/informationCardButtonIcon.json5
@@ -20,7 +20,7 @@
                     },
                     "description":{
                         "default":{
-                            "value": "{color.text.secondary.default.value}"
+                            "value": "{color.text.secondary.normal.value}"
                         } 
                     }
                 },
@@ -85,7 +85,7 @@
                     },
                     "description":{
                         "default":{
-                            "value": "{color.text.secondary.default.value}"
+                            "value": "{color.text.secondary.normal.value}"
                         } 
                     }
                 },
@@ -149,7 +149,7 @@
                     },
                     "description":{
                         "default":{
-                            "value": "{color.text.secondary.default.value}"
+                            "value": "{color.text.secondary.normal.value}"
                         } 
                     }
                 },
